# BakuRealTimeEstate

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  start-jobmanager.sh
flink_jobs/: flink_job.py
producers/: fx_rate_producer.py  real_estate_producer.py
